# Parallelization

./: CMakeLists.txt  README.md  diff.txt  travis.sh
cmake/: FindTBB.cmake
expected/: basicdict-solved.txt  nounsdict-solved.txt  phrasesbig-solved.txt  phrasessmall-solved.txt
src/: HashTable.hpp  SrcMain.cpp  sha1.cpp
tests/: CMakeLists.txt  GradedTests.cpp  StudentTests.cpp  md5.h
